<resources>
    <string name="app_name">Inspection</string>
    <string name="loading">正在刷新...</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="fingers_unclench">松开刷新</string>
    <string name="contentDescription">contentDescription</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>

    <!--  登录  -->
    <string name="bt_login">登录</string>
    <string name="tx_input_user_name">请输入用户名</string>
    <string name="tx_login_hint_psd_Str">请输入密码</string>

    <!--  底部标签  -->
    //状态、设备、系统、我的
    <string name="menu_status">状态</string>
    <string name="menu_equipment">设备</string>
    <string name="menu_system">系统</string>
    <string name="meny_me">我的</string>

    <!--  底部标签  -->
    <string name="status_time">日期时间</string>
    <string name="status_sys">系统状态</string>

    <!--  我的  -->
    <string name="bt_mine_change_psw">修改密码</string>
    <string name="bt_mine_upercenter">个人中心</string>
    <string name="bt_mine_login">登录</string>
    <string name="bt_mine_name">姓名</string>
    <string name="bt_mine_acc">账号</string>
    <string name="bt_mine_num">手机</string>
    <string name="bt_mine_part">部门</string>

    <!--网络状态-->
    <string name="network">网络状态</string>
    <string name="nonetwork">网络异常，请检查网络</string>
    <string name="succnetwork">网络已连接</string>
    <string name="searching">请输入IP进行查询</string>

    <!--退出-->
    <string name="exit">退出系统</string>

    <!--设备-->
    <string name="e_id">对应系统</string>
    <string name="e_ip">IP</string>
    <string name="e_state">状态</string>
    <string name="e_problem">故障问题</string>
    <string name="e_txt">服务器IP：</string>




    <!--系统-->
    <string name="system_details">系统详情</string>
    <string name="sys_name">系统名称</string>
    <string name="sys_exp">系统介绍</string>
    <string name="sys_time">管理员</string>
    <string name="sys_manager">管理员电话</string>
    <string name="sys_managerphone">联系电话</string>
    <string name="sys_list">设备列表</string>
    <string name="sys_id">序列号</string>
    <string name="sys_state">设备状态</string>
    <string name="sys_ip">IP</string>
    <string name="sys_people">维护人员</string>

    <!--系统增加-->
    <string name="sys_add_txt">添加系统</string>
    <string name="sys_btn_ok">确定</string>
    <string name="sys_btn_cancle">取消</string>

    <!--系统修改-->
    <string name="sys_change_txt">修改系统</string>



    <!--系统主页面列表-->
    <string name="sys_main_id">系统ID</string>
    <string name="sys_main_state">系统状态</string>
    <string name="sys_main_name">系统名称</string>
    <string name="sys_contact_name">负责人</string>
    <string name="sys_contact_number">负责人电话</string>
    <string name="sys_txt">系统名称：</string>
    <string name="sys_main_list">系统列表</string>


    //IP 状态 设备名称 id
    <!--系统列表-->
    <string name="sys_l">系统列表</string>
    <string name="sys_list_ip">IP</string>
    <string name="sys_list_state">状态</string>
    <string name="sys_list_name">设备名称</string>
    <string name="sys_list_id">id</string>



    <!--设备-->
    <string name="el_id">ID</string>
    <string name="el_stateName">设备名</string>
    <string name="el_3">IP</string>
    <string name="el_4">所属系统</string>
    <string name="el_5">状态</string>
    <string name="el_6">CPU</string>
    <string name="el_7">内存</string>
    <string name="el_8">硬盘</string>
    <string name="el_9">描述</string>
    <string name="el_10">设备详情</string>
    <string name="el_check_ip">请输入IP进行查询</string>
    <string name="el_btn_search">搜索</string>
    <string name="el_null">无</string>

    <!--网络-->
    <string name="net_1">网络是否连接</string>
    <string name="net_2">网络连接类型</string>
    <string name="net_3">网络地址</string>

    <!--修改密码-->
    <string name="pwd_acc">请输入用户名</string>
    <string name="pwd_old">请输入旧密码</string>
    <string name="pwd_new">请输入新密码</string>
    <string name="pwd_new2">请确认新密码</string>
    <string name="pwd_acc_t">用户名</string>
    <string name="pwd_old_t">旧密码</string>
    <string name="pwd_new_t">新密码</string>
    <string name="bt_yes">确定</string>
    <string name="bt_no">取消</string>

    <!--线状图-->
    <string name="line_7">近7日统计</string>
    <string name="line_ip">设备IP:</string>


</resources>
