<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="日期时间"
        android:textAlignment="center"
        android:textSize="26sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:scaleType="centerInside"
            android:src="@mipmap/icon_search_top" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="请输入IP进行查询"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonGO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="搜索"
            android:textSize="18sp" />

    </LinearLayout>

    <Spinner
        android:id="@+id/spinner"
        android:spinnerMode="dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="23sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="20sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/e_id"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView_fine"
            android:layout_width="40sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/e_ip"
            android:textSize="20sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="20sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/e_state"
            android:textSize="20sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/e_problem"
            android:textSize="20sp"
            android:gravity="center"/>
    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>