<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:divider="@null"   >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e_txt"
                android:textColor="@color/color_gray_dark"
                android:textSize="@dimen/size_max_40"/>

            <TextView
                android:id="@+id/textViewIp1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/color_gray_dark"
                android:textSize="@dimen/size_max_40"
                tools:hint="@string/sys_list_ip" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewScore1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/sys_list_state"
                android:textColor="@color/color_gray"
                android:textSize="@dimen/size_ll_32" />

            <TextView
                android:id="@+id/textViewSysname1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/sys_list_name"
                android:textColor="@color/color_gray"
                android:textSize="@dimen/size_ll_32" />

<!--            <TextView-->
<!--                android:id="@+id/textViewSBUid1"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="right"-->
<!--                android:layout_weight="1"-->
<!--                android:gravity="right"-->
<!--                android:text="@string/sys_list_id"-->
<!--                android:textColor="@color/color_gray"-->
<!--                android:textSize="@dimen/size_ll_32" />-->
        </LinearLayout>

    </LinearLayout>

</LinearLayout>