<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/vertical_margin_30px"
            android:layout_marginRight="@dimen/vertical_margin_30px"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/rl_organization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/netconnect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/vertical_margin_25px"
                    android:hint="@string/net_1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_ll_30" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_line_gray" />

            <RelativeLayout
                android:id="@+id/rl_equipment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/nettype"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/vertical_margin_25px"
                    android:hint="@string/net_2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_ll_30" />


            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_line_gray" />
            <RelativeLayout
                android:id="@+id/rl_warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/ipaddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/vertical_margin_25px"
                    android:hint="@string/net_3"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_ll_30" />


            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_line_gray" />




        </LinearLayout>
    </ScrollView>



</RelativeLayout>