<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@drawable/bg_around">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:padding="5dp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/iv_header"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:scaleType="fitXY"
            android:src="@drawable/icon_title2"
            android:visibility="visible" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_account"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@mipmap/icon_user_invisible"
                android:visibility="visible" />

            <EditText
                android:id="@+id/edt_login_account"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/tx_input_user_name"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textColor="@color/color_black_light"
                android:textColorHint="@color/color_gray_light"
                android:textSize="@dimen/size_l_28" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:background="@color/color_line_gray" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_pwd_visible"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@mipmap/icon_pwd_invisible"
                android:visibility="visible" />

            <EditText
                android:id="@+id/edt_login_pwd"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/tx_login_hint_psd_Str"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/color_black_light"
                android:textColorHint="@color/color_gray_light"
                android:textSize="@dimen/size_l_28" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@color/color_line_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="15dp">


            <Button
                android:id="@+id/tv_login"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="16.0dip"
                android:layout_marginLeft="40.0dip"
                android:layout_marginRight="40.0dip"
                android:background="@drawable/btn_red_big_radius"
                android:text="@string/bt_mine_login"
                android:textColor="@color/white"
                android:textSize="17.0sp"/>
        </RelativeLayout>



    </LinearLayout>

</RelativeLayout>